# Streamlit

./: README.md  diagnose_credentials.py  main.py  main_correct.py  pyproject.toml  requirements.txt  restart_app.bat  restore_correct_main.py  run_streamlit.bat  run_streamlit.sh  streamlit_app.py  test_bedrock.py  test_langchain_bedrock.py  test_model_load.py  test_sonnet_profiles.py
src/: main.py  main.py.backup  main_inspo.py  ui_server.py
src/atomicAquaLangGraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mcp_client/: client.py
src/model/: fix_kb_images.py  input.py  invoke_S3.py  load.py  test.py
test/: test_main.py
