[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomicAquaLangGraph"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "bedrock-agentcore >= 1.0.3",
    "langchain >= 1.0.3",
    "langchain-mcp-adapters >= 0.1.11",
    "langchain_aws >= 1.0.0",
    "langgraph >= 1.0.2",
    "mcp >= 1.19.0",
    "python-dotenv >= 1.2.1",
    "tiktoken == 0.11.0",
    "numpy == 1.26.4",
    "pywin32 >= 310; sys_platform == 'win32'"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Force uv to treat pywin32 as Windows-only when cross-compiling
[tool.uv]
override-dependencies = [
    "pywin32; sys_platform == 'win32'"
]